--- a/index.html
+++ b/index.html
@@ -3,76 +3,61 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Ahmed's Personal Site </title>
+  <title>Ahmed Hassan</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="Ahmed.png" alt="Ahmed" width="200" height="200"></td>
-      <td>
-        <h1>Ahmed Janabi</h1>
-        <p><em>Student at <a href="http://www.ucj.edu.sa"><strong>Jubail university colloge</strong></a>.</em> </p>
-        <p>I live in Saudi Arabai ......lab lab lab </p>
-      </td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Ahmed </h1>
+    <h2>a <span class="pro">pro</span>grammer </h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="" src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="circluar" src="images/Ahmed.png" alt="Ahmed Janabi" width="500px" height="500px">
+      <h2>Hello.</h2>
+      <p class="intro">I am a computer science student.I'm a Web Developer.I ❤ coffee and Video Games.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="circluar1" src=images/computer.png alt="computer-img">
+        <h3>Design & Development</h3>
+        <p>I started learning to code when I was 20 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing.</p>
+      </div>
+      <br>
+      <div class="skill-row">
+        <img class="circluar2" src="images/destiny.png" alt="destiny-img" width="400px" height="400px">
+        <h3>Playing Video Games</h3>
+        <p>One of my best skill is actually playing video games. </p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you want to contact me just call me or send an email.</h3>
+      <p>My mobile : +966578240665</p>
+      <a class="btn" href="mailto:janabiah1@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/ahmed-janabi">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/Ahmad_15j">Twitter</a>
+    <p class="coptright">© 2021 Ahmed Janabi.</p>
+  </div>
 
 
-  <hr size="3">
-  <h3>Skills</h3>
-  <ul>
-    <li>programming</li>
-    <li>teaching</li>
-  </ul>
-  <table border="2">
-    <thead>
-      <tr>
-        <th>data</th>
-        <th>years</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>20/10</td>
-        <td>2015</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>hobbies</h3>
-  <ol>
-    <li><a href="https://www.bungie.net">playing</a></li>
-    <li>writing</li>
-  </ol>
-  <hr>
-  <h3>Skills</h3>
-  <table ceelspacing="15">
-    <tr>
-      <<td>HTML</td>
-        <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>CSS</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-
-    <tr>
-      <td>C++</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-
-    <tr>
-      <td>Java</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-
-    </tr>
-  </table>
-  <hr>
-  <a href="contactme.html">contact me</a>
-  <br>
-  <a href="Skills.html">Skills</a>
 
 </body>
 
